--- a/01-merhaba-dunya.html
+++ b/01-merhaba-dunya.html
@@ -11,6 +11,6 @@
     
 <p>Lorem ipsum, <br> dolor sit amet consectetur adipisicing elit. Laudantium nemo vitae assumenda, quod doloremque voluptates suscipit eum, facilis esse saepe neque sit asperiores dolore magnam dignissimos dicta officia soluta sint?</p>
 
-<p>Lorem ipsum dolor sit amet.</p>
+<p>Lorem ipsum dolor sit amett.</p>
 </body>
 </html>
